--- a/src/components/ui/header/styles.scss
+++ b/src/components/ui/header/styles.scss
@@ -122,7 +122,7 @@
       display: block;
       padding: 0 0 0 ($space-1 * 2);
       font-size: $font-size-small;
-      font-weight: $font-weigth-semi-bold;
+      font-weight: $font-weight-semi-bold;
       color: $color-primary;
       text-transform: uppercase;
       letter-spacing: 1.4px;
