--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -51,10 +51,10 @@ $font-size-huge:          22px;
 $font-size-extrahuge:     32px;
 
 // typography – weights
-$font-weigth-light: 300;
-$font-weigth-regular: 400;
-$font-weigth-semi-bold: 500;
-$font-weigth-bold: 700;
+$font-weight-light: 300;
+$font-weight-regular: 400;
+$font-weight-semi-bold: 500;
+$font-weight-bold: 700;
 
 // dimensions
 $size-header: 60px;
