Fixes field width

--- a/src/components/form/field/styles.scss
+++ b/src/components/form/field/styles.scss
@@ -2,7 +2,7 @@
 @import 'styles/functions';
 
 .c-field {
-  // flex: 1;
+  flex: 1;
   -webkit-font-smoothing: antialiased;
   font-family: $font-family-1;
 
