Makes field inline by default

--- a/src/components/form/field/styles.scss
+++ b/src/components/form/field/styles.scss
@@ -2,6 +2,7 @@
 @import 'styles/functions';
 
 .c-field {
+  display: inline-block;
 
   -webkit-font-smoothing: antialiased;
   font-family: $font-family-1;
