--- a/styles/components/_slider.scss
+++ b/styles/components/_slider.scss
@@ -1,4 +1,3 @@
-@import '~wri-api-components/dist/components.css';
 @import 'styles/settings';
 @import 'styles/functions';
 
@@ -13,10 +12,6 @@
         touch-action: none;
     box-sizing: border-box;
     -webkit-tap-highlight-color: rgba(palette(black), 0);
-
-    &.-disabled {
-      pointer-events: none;
-    }
 
     // themes
     &.-light {
@@ -60,6 +55,11 @@
         }
       }
     }
+  }
+
+  .-disabled {
+    pointer-events: none;
+    opacity: .5;
   }
 
   .rc-slider * {
@@ -123,66 +123,6 @@
       width: 10px;
       height: 10px;
       border-radius: 50%;
-    }
-  }
-
-  .range-tooltip {
-    display: inline-block;
-    -webkit-font-smoothing: antialiased;
-    font-family: $font-family-1;
-    cursor: pointer;
-
-    > .rc-tooltip-content {
-      line-height: 1;
-
-      > .rc-tooltip-arrow {
-        display: none;
-      }
-
-      > .rc-tooltip-inner {
-        top: -#{$space-1};
-        min-height: 0;
-        padding: 0;
-        border: 0;
-        border-radius: 0;
-        box-shadow: none;
-        background: transparent;
-
-        font-size: $font-size-big;
-        font-weight: $font-weight-semi-bold;
-        color: currentColor;
-      }
-    }
-
-    // themes
-    &.-light {
-      .rc-tooltip-content {
-        color: palette(blue, light);
-
-        > .rc-tooltip-inner {
-          &:hover {
-            color: palette(white);
-          }
-        }
-      }
-    }
-
-    &.-dark {
-      .rc-tooltip-content {
-        color: palette(gray, dark);
-
-        > .rc-tooltip-inner {
-          &:hover {
-            color: palette(gray);
-          }
-        }
-      }
-    }
-
-
-    // states
-    &.-disabled {
-      pointer-events: none;
     }
   }
 }
