--- a/src/components/widgets/widget/styles.scss
+++ b/src/components/widgets/widget/styles.scss
@@ -47,6 +47,7 @@
   > .widget-content {
     position: relative;
     min-height: 250px;
+    padding: $space-1 * 3;
     background: palette(white);
   }
 
