--- a/src/components/form/field/styles.scss
+++ b/src/components/form/field/styles.scss
@@ -15,7 +15,7 @@
   }
 
   > .field-container {
-    margin: $space-1 * 4 0 0;
+    margin: $space-1 * 2 0 0;
   }
 
   // themes
@@ -52,6 +52,25 @@
   &.-bigger {
     > label {
       font-size: $font-size-extrabig;
+    }
+  }
+
+  &.-higher-margin-top {
+    > .field-container {
+      margin: $space-1 * 4 0 0;
+    }
+  }
+
+  // disabled styles
+  &.-disabled {
+    pointer-events: none;
+
+    &.-light {
+      color: rgba(palette(white), .4);
+    }
+
+    &.-dark {
+      color: rgba(palette(gray, dark), .4);
     }
   }
 }
