--- a/src/components/ui/button/styles.scss
+++ b/src/components/ui/button/styles.scss
@@ -38,6 +38,11 @@
   &.-light {
     color: palette(white);
     border-color: palette(white);
+
+    &.-disabled {
+      color: rgba(palette(white), .5);
+      border-color: rgba(palette(white), .5);
+    }
   }
 
   &.-blue {
@@ -65,6 +70,11 @@
     &:active {
       background: darken(palette(blue, secondary), 3%);
       border-color: darken(palette(blue, secondary), 3%);
+    }
+
+    &.-disabled {
+      background: rgba(palette(blue, secondary), .5);
+      border-color: rgba(palette(blue, secondary), .5);
     }
   }
 
@@ -103,5 +113,10 @@
 
   &.-border {
     border: 1px solid transparent;
+  }
+
+  &.-disabled {
+    pointer-events: none;
+    cursor: default;
   }
 }
