Adds colorful slider

--- a/styles/components/_slider.scss
+++ b/styles/components/_slider.scss
@@ -70,6 +70,20 @@
         }
       }
     }
+
+    &.-colorful {
+      .rc-slider-rail {
+        height: 5px;
+
+        &:before {
+          display: none;
+        }
+      }
+
+      .rc-slider-track {
+        display: none;
+      }
+    }
   }
 
   .-disabled {
