Removes value prop from checkbox

--- a/src/components/form/checkbox/styles.scss
+++ b/src/components/form/checkbox/styles.scss
@@ -11,7 +11,7 @@
     top: 0;
     left: 0;
     display: block;
-    padding: 2px 0 0 $space-1 * 3;
+    padding: 0 0 0 $space-1 * 3;
     width: auto;
     transform: none;
     font-size: $font-size-big;
