--- a/src/components/form/field/styles.scss
+++ b/src/components/form/field/styles.scss
@@ -9,9 +9,18 @@
   -webkit-font-smoothing: antialiased;
   font-family: $font-family-1;
 
-  > label {
-    font-size: $font-size-default;
-    color: currentColor;
+  > .label-container {
+    display: flex;
+    align-items: center;
+
+    > label {
+      font-size: $font-size-big;
+      color: currentColor;
+
+      & + * {
+        margin: 0 0 0 $space-1;
+      }
+    }
   }
 
   > .field-container {
