--- a/styles/_timeline.scss
+++ b/styles/_timeline.scss
@@ -56,6 +56,15 @@
 
     }
 
+    &.-disabled {
+      pointer-events: none;
+      border-color: rgba(palette(blue, light), .5);
+
+      > .timeline-label {
+        color: rgba(palette(blue, light), .5);
+      }
+    }
+
     .timeline-label {
       font-size: $font-size-big;
       line-height: $font-size-big;
