--- a/styles/_radio.scss
+++ b/styles/_radio.scss
@@ -174,4 +174,18 @@
   &.-filters {
     margin: ($space-1 * 4) 0 0 ($space-1 * 3);
   }
+
+  .radio-container {
+    display: flex;
+    margin: 0 0 $space-1;
+
+    > * {
+      margin: 0;
+    }
+
+    .icon-container {
+      display: inline-flex;
+      margin: 0 0 0 $space-1;
+    }
+  }
 }
