--- a/styles/_sidebar.scss
+++ b/styles/_sidebar.scss
@@ -49,7 +49,7 @@
   .btn-toggle {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     position: absolute;
     top: 0;
     left: 100%;
