Absolute URL for logo

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,3 +1,5 @@
+
+
 .c-header {
   background: white;
   width: 100%;
@@ -39,7 +41,7 @@
       display: block;
       width: 160px;
       height: $size-header;
-      background: url('/images/logo.png') center no-repeat;
+      background: url('https://rawcdn.githack.com/Vizzuality/aqueduct-water-risk/f84043796b88afd1903022b1eb1047b20fb26f07/public/images/logo.png') center no-repeat;
       background-size: contain;
 
       span {
