--- a/src/components/ui/header/styles.scss
+++ b/src/components/ui/header/styles.scss
@@ -2,19 +2,13 @@
 @import 'styles/functions';
 
 .c-header {
-  display: flex;
-  position: relative;
-  background: palette(white);
+  background: white;
   width: 100%;
   height: $size-header;
-  z-index: $max-z-index - 1;
-
-  -webkit-font-smoothing: antialiased;
-  font-family: $font-family-1;
-
-  &.-embed {
-    border-bottom: 1px solid $color-primary;
-  }
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  z-index: 10000;
 
   nav {
     display: flex;
@@ -23,69 +17,46 @@
     position: relative;
     z-index: 2;
     width: 100%;
-    background: palette(white);
+    background: white;
 
-    .list {
+    ul {
       display: flex;
       justify-content: space-between;
 
-      li {
-        position: relative;
+      > li {
         list-style: none;
-
-        > ul {
-          display: flex;
-          padding: 0;
-        }
-      }
-
-      li > a,
-      li > button {
         position: relative;
-        z-index: 2;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-shrink: 0;
-        height: $size-header;
-        padding: 0 ($space-1 * 2);
-        background: palette(white);
-        color: $color-primary;
-        fill: $color-primary;
-        font-size: 12px;
-        font-weight: 500;
-        letter-spacing: 1.4px;
-        transition: all $animation-time $ease-in-out-sine;
-        text-transform: uppercase;
-        cursor: pointer;
 
-        > * {
-          margin: 0 $space-1 0 0;
-          &:last-child { margin: 0; }
-        }
+        > a {
+          position: relative;
+          z-index: 2;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-shrink: 0;
+          height: $size-header;
+          padding: 0 ($space-1 * 2);
+          background: white;
+          color: $color-primary;
+          fill: $color-primary;
+          font-size: 12px;
+          font-weight: 500;
+          letter-spacing: 1.4px;
+          transition: all $animation-time $ease-in-out-sine;
+          text-transform: uppercase;
 
-        &:hover { background: darken(white, 5%); }
-        &:active { background: darken(white, 10%);}
-        &.-active {
-          background: $color-primary;
-          color: white;
-          fill: white;
-        }
-      }
+          > * {
+            margin: 0 $space-1 0 0;
+            &:last-child { margin: 0; }
+          }
 
-      li > button {
-        background: none;
-        border: 0;
-        outline: 0;
-      }
-
-      li > a {
-        text-decoration: none;
-      }
-
-      li {
-        &:last-child {
-          padding: 0;
+          &:hover { background: darken(white, 5%); }
+          &:active { background: darken(white, 10%);}
+          &.-active {
+            background: $color-primary;
+            color: white;
+            fill: white;
+          }
         }
       }
     }
@@ -96,7 +67,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 ($space-1 * 2) 0 0;
+    padding: 0 ($space-1 * 2);
     margin: 0;
 
     .header-logo {
@@ -104,9 +75,13 @@
       display: block;
       width: 160px;
       height: $size-header;
-      background-position: center;
-      background-repeat: no-repeat;
+      background: url('https://rawcdn.githack.com/Vizzuality/aqueduct-water-risk/f84043796b88afd1903022b1eb1047b20fb26f07/public/images/logo.png') center no-repeat;
       background-size: contain;
+
+      span {
+        display: block;
+        text-indent: -9999px;
+      }
 
       &:before {
         content: "BETA";
@@ -116,26 +91,16 @@
         font-size: $font-size-extra-small;
         color: $color-text-1;
       }
-
-      span {
-        display: block;
-        text-indent: -9999px;
-      }
     }
 
     .header-title {
       display: block;
       padding: 0 0 0 ($space-1 * 2);
       font-size: $font-size-small;
-      font-weight: $font-weight-semi-bold;
       color: $color-primary;
       text-transform: uppercase;
       letter-spacing: 1.4px;
       white-space: nowrap;
-    }
-
-    a {
-      text-decoration: none;
     }
   }
 }
