added support for disabled option in dropdown list

--- a/styles/_dropdown.scss
+++ b/styles/_dropdown.scss
@@ -50,6 +50,10 @@
         outline: none;
         background-color: rgba(palette(gray, 'dark'), .05);
       }
+      &.-disabled {
+        opacity: 0.5;
+        cursor: default;
+      }
     }
   }
 }
